--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: lazyninjacat/mrblog
 
-media_folder: static/assets
+media_folder: ../content/assets
 public_folder: assets
 
 collections:
