fix netlify imgs image handling

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   repo: lazyninjacat/mrblog
 
 media_folder: content/assets
-public_folder: assets
+public_folder: ../assets
 
 collections:
   - name: blog
